--- a/index.html
+++ b/index.html
@@ -4,42 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="nav">
         <a href="/"
           ><img src="./images/logo.svg" alt="Shop Bakery" class="logo"
         /></a>
-        <ul>
-          <li><a href="#traditions-section">Наші традиції</a></li>
-          <li><a href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a href="#formats-section">Формати</a></li>
-          <li><a href="#contact-section">Контакти</a></li>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#traditions-section">Наші традиції</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#chefs-section">Шеф-кухарі</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#formats-section">Формати</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#contact-section">Контакти</a>
+          </li>
         </ul>
       </nav>
-      <button type="button">Замовити дзвінок</button>
+      <button class="button" type="button">Замовити дзвінок</button>
     </header>
     <main>
-      <section id="modern-bakery-section">
-        <h1><span>Сучасна</span> пекарня</h1>
+      <section id="hero-section">
+        <h1 class="main-title"><span class="green">Сучасна</span> пекарня</h1>
       </section>
       <section id="traditions-section">
-        <ul>
-          <li>Великий попит на ринку</li>
-          <li>Доступні за бюджетом формати</li>
-          <li>Досвідчена управлінська команда</li>
+        <ul class="traditions__list">
+          <li class="traditions__item">Великий попит на ринку</li>
+          <li class="traditions__item">Доступні за бюджетом формати</li>
+          <li class="traditions__item">Досвідчена управлінська команда</li>
         </ul>
         <div>
-          <h2>Новий формат традицій</h2>
+          <h2 class="section-title">Новий формат традицій</h2>
           <p>
-            <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
-            зберегла смак традиційної випічки та натуральність інгредієнтів.
+            <span class="green">shop bakery</span> — це пекарня, яка взяла все
+            найкраще, і зберегла смак традиційної випічки та натуральність
+            інгредієнтів.
           </p>
           <p>
             Ми працюємо як найвідоміші мережі—
-            <span>5 хвилин і замовлення готове</span>. А ще у наших пекарень
-            стильний дизайн та висока якість обслуговування!
+            <span class="green">5 хвилин і замовлення готове</span>. А ще у
+            наших пекарень стильний дизайн та висока якість обслуговування!
           </p>
         </div>
         <div>
@@ -50,7 +60,9 @@
         </div>
       </section>
       <section id="chefs-section">
-        <h2>Наші найкращі <span>шеф-кухарі</span></h2>
+        <h2 class="section-title">
+          Наші найкращі <span class="green-dark">шеф-кухарі</span>
+        </h2>
         <ul>
           <li>
             <article>
@@ -76,10 +88,10 @@
         </ul>
       </section>
       <section id="formats-section">
-        <h2>Формати</h2>
-        <ul>
-          <li>
-            <article>
+        <h2 class="section-title">Формати</h2>
+        <ul class="formats__list">
+          <li class="formats__item">
+            <article class="formats__card">
               <h3 lang="en">Walrus</h3>
               <p>Площа: до 120 м2</p>
               <p>Меню: розширене меню</p>
@@ -90,8 +102,8 @@
               <p>Посадкові місця: є</p>
             </article>
           </li>
-          <li>
-            <article>
+          <li class="formats__item">
+            <article class="formats__card">
               <h3 lang="en">Horseshoe</h3>
               <p>Площа: до 25 м2</p>
               <p>Меню: найпопулярніші позиції меню</p>
@@ -99,8 +111,8 @@
               <p>Посадкові місця: відсутні</p>
             </article>
           </li>
-          <li>
-            <article>
+          <li class="formats__item">
+            <article class="formats__card">
               <h3 lang="en">Handlebar</h3>
               <p>Площа: до 15 м2</p>
               <p>Меню: найпопулярніші позиції меню</p>
@@ -111,8 +123,8 @@
         </ul>
       </section>
       <section id="contact-section">
-        <h2>Приєднуйся до мережі пекарень</h2>
-        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+        <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
+        <p class="green-dark">Заповни форму, щоб ми звʼязались з тобою!</p>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.163630435281!2d30.488698376557704!3d50.45667757159333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1733584511117!5m2!1suk!2sua"
           width="600"
@@ -124,44 +136,59 @@
       </section>
     </main>
     <footer>
-      <nav>
+      <nav class="nav">
         <a href="/"
           ><img src="./images/logo.svg" alt="Shop Bakery" class="logo"
         /></a>
-        <ul>
-          <li><a href="#traditions-section">Наші традиції</a></li>
-          <li><a href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a href="#formats-section">Формати</a></li>
-          <li><a href="#contact-section">Контакти</a></li>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#traditions-section">Наші традиції</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#chefs-section">Шеф-кухарі</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#formats-section">Формати</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#contact-section">Контакти</a>
+          </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="tel:+38(096)0000007">+ 38 (096) 000 00 07</a></li>
-          <li>
-            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+        <ul class="address__list">
+          <li class="address__item">
+            <a class="address__link" href="tel:+38(096)0000007"
+              >+ 38 (096) 000 00 07</a
+            >
           </li>
-          <li>
+          <li class="address__item">
+            <a class="address__link" href="mailto:shopbakery@gmail.com"
+              >shopbakery@gmail.com</a
+            >
+          </li>
+          <li class="address__item">
             <a
+              class="address__link"
               href="https://www.google.com/maps?q=вулиця Січових Стрільців, 54, Київ, 02000"
               target="_blank"
             >
               Україна, м. Київ, вул. Січових Стрільців 54</a
             >
           </li>
-          <li>
-            <a href="#">
+          <li class="address__item">
+            <a class="address__link" href="#">
               <!-- facebook icon-->
             </a>
           </li>
-          <li>
-            <a href="#">
+          <li class="address__item">
+            <a class="address__link" href="#">
               <!-- instagram icon-->
             </a>
           </li>
         </ul>
         <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>&copy; 2022 Дані захищені</p>
+        <p class="brown-light">&copy; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
